--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,7 @@
 		"github.vscode-codeql",
 		"slevesque.vscode-zipexplorer"
 	],
+	"onCreateCommand": ".devcontainer/oncreate.sh",
 	"postCreateCommand": "git submodule init && git submodule update --recursive",
 	"settings": {
 		"codeQL.runningQueries.memory": 2048
