--- a/java-query-pack/qlpack.yml
+++ b/java-query-pack/qlpack.yml
@@ -1,5 +1,6 @@
-name: trganda/codeql-queries-for-java
+name: trganda/java-utils
 version: 0.0.1
+description: Utility library and queries for Java
 dependencies:
   # This uses the latest version of the codeql/java-all library.
   # You may want to change to a more precise semver string.
