--- a/java-utils/codeql-pack.lock.yml
+++ b/java-utils/codeql-pack.lock.yml
@@ -2,27 +2,29 @@
 lockVersion: 1.0.0
 dependencies:
   codeql/dataflow:
-    version: 1.1.7
+    version: 2.0.7
   codeql/java-all:
-    version: 7.0.1
+    version: 7.2.0
   codeql/mad:
-    version: 1.0.13
+    version: 1.0.23
+  codeql/quantum:
+    version: 0.0.1
   codeql/rangeanalysis:
-    version: 1.0.13
+    version: 1.0.23
   codeql/regex:
-    version: 1.0.13
+    version: 1.0.23
   codeql/ssa:
-    version: 1.0.13
+    version: 1.1.2
   codeql/threat-models:
-    version: 1.0.13
+    version: 1.0.23
   codeql/tutorial:
-    version: 1.0.13
+    version: 1.0.23
   codeql/typeflow:
-    version: 1.0.13
+    version: 1.0.23
   codeql/typetracking:
-    version: 1.0.13
+    version: 2.0.7
   codeql/util:
-    version: 2.0.0
+    version: 2.0.10
   codeql/xml:
-    version: 1.0.13
+    version: 1.0.23
 compiled: false
